// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObjectPage IconTabBar Mode 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar ObjectPage-iconTabBarMode"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              >
                Fiori Object Page Title
              </ui5-title>
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              >
                Sub Title
              </ui5-label>
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
              <div>
                <ui5-button
                  design="Default"
                  ui5-button=""
                >
                  Action
                </ui5-button>
              </div>
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    >
      <span
        class="ObjectPage-headerCustomContent"
      >
        <div
          style="display: flex; flex-direction: column;"
        >
          <ui5-link
            design="Default"
            href="https://www.sap.com"
            ui5-link=""
          >
            www.myurl.com
          </ui5-link>
          <span
            class="Text-text"
          >
            Address 1
          </span>
          <span
            class="Text-text"
          >
            Address 2
          </span>
          <span
            class="Text-text"
          >
            Address 3
          </span>
        </div>
      </span>
    </div>
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text="Test 1"
          ui5-tab=""
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          semantic-color="Default"
          text="Test 2"
          ui5-tab=""
        />
        <ui5-tab
          data-index="2"
          data-section-id="3"
          semantic-color="Default"
          text="Test 3"
          ui5-tab=""
        />
        <ui5-tab
          data-index="3"
          data-section-id="4"
          semantic-color="Default"
          text="Test 4"
          ui5-tab=""
        />
        <ui5-tab
          data-index="4"
          data-section-id="5"
          semantic-color="Default"
          text="Test 5"
          ui5-tab=""
        />
      </ui5-tabcontainer>
      <ui5-button
        class="ObjectPageAnchorBar-anchorBarActionButton ObjectPageAnchorBar-anchorBarActionButtonExpandable "
        data-ui5wcr-object-page-header-action=""
        design="Default"
        icon="slim-arrow-down"
        ui5-button=""
      />
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 1
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <ui5-label
            ui5-label=""
          >
            My Content 1
          </ui5-label>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Just Some Sections 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar ObjectPage-iconTabBarMode"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Key Infos 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div>
              <ui5-link
                design="Default"
                href="PathSegment1"
                ui5-link=""
              >
                Path1
              </ui5-link>
              <ui5-label
                style="margin: 0px 0.25rem;"
                ui5-label=""
              >
                /
              </ui5-label>
              <ui5-link
                design="Default"
                href="PathSegment2"
                ui5-link=""
              >
                Path2
              </ui5-link>
              <ui5-label
                style="margin: 0px 0.25rem;"
                ui5-label=""
              >
                /
              </ui5-label>
              <ui5-link
                design="Default"
                href="PathSegment3"
                ui5-link=""
              />
            </div>
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              >
                <div>
                  <ui5-title
                    level="H5"
                    ui5-title=""
                  >
                    Key Info 1
                  </ui5-title>
                  <span
                    class="Text-text"
                  >
                    Value 1
                  </span>
                </div>
                <div>
                  <ui5-title
                    level="H5"
                    ui5-title=""
                  >
                    Key Info 2
                  </ui5-title>
                  <span
                    class="Text-text"
                  >
                    Value 2
                  </span>
                </div>
                <div>
                  <ui5-title
                    level="H5"
                    ui5-title=""
                  >
                    Key Info 3
                  </ui5-title>
                  <span
                    class="Text-text"
                  >
                    Value 3
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-2"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test 2
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage No Header 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar ObjectPage-noHeader"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          selected="true"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-2"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test 2
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Not crashing with 0 sections 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar ObjectPage-iconTabBarMode"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      />
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Not crashing with 1 section - Default Mode 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Not crashing with 1 section - IconTabBar Mode 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar ObjectPage-iconTabBarMode"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Only Sections 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              >
                Fiori Object Page Title
              </ui5-title>
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              >
                Sub Title
              </ui5-label>
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
              <div>
                <ui5-button
                  design="Default"
                  ui5-button=""
                >
                  Action
                </ui5-button>
              </div>
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    >
      <span
        class="ObjectPage-headerCustomContent"
      >
        <div
          style="display: flex; flex-direction: column;"
        >
          <ui5-link
            design="Default"
            href="https://www.sap.com"
            ui5-link=""
          >
            www.myurl.com
          </ui5-link>
          <span
            class="Text-text"
          >
            Address 1
          </span>
          <span
            class="Text-text"
          >
            Address 2
          </span>
          <span
            class="Text-text"
          >
            Address 3
          </span>
        </div>
      </span>
    </div>
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text="Test 1"
          ui5-tab=""
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          semantic-color="Default"
          text="Test 2"
          ui5-tab=""
        />
        <ui5-tab
          data-index="2"
          data-section-id="3"
          semantic-color="Default"
          text="Test 3"
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 1
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <ui5-label
            ui5-label=""
          >
            My Content 1
          </ui5-label>
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-2"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 2
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <ui5-label
            ui5-label=""
          >
            My Content 2
          </ui5-label>
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-3"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 3
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <ui5-label
            ui5-label=""
          >
            My Content 3
          </ui5-label>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage Set selected section id 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar ObjectPage-iconTabBarMode"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              />
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              />
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    />
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
        ui5-tabcontainer=""
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          selected="true"
          semantic-color="Default"
          text=""
          ui5-tab=""
        />
      </ui5-tabcontainer>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-2"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        />
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test 2
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ObjectPage With Subsections 1`] = `
<DocumentFragment>
  <div
    class="ObjectPage-objectPage sapScrollBar"
    data-component-name="ObjectPage"
  >
    <header
      aria-roledescription="Object Page header"
      class="ObjectPage-header"
      role="banner"
      style="padding-right: 12px;"
    >
      <header
        class="ObjectPage-titleBar"
      >
        <div
          class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsCenter FlexBox-flexWrapNoWrap"
        >
          <div
            class="FlexBox-flexBox FlexBox-flexBoxDirectionColumn FlexBox-justifyContentStart FlexBox-alignItemsStretch FlexBox-flexWrapNoWrap ObjectPage-container"
          >
            <div
              class="FlexBox-flexBox FlexBox-flexBoxDirectionRow FlexBox-justifyContentStart FlexBox-alignItemsBaseline FlexBox-flexWrapNoWrap"
            >
              <ui5-title
                class="ObjectPage-title"
                level="H3"
                ui5-title=""
              >
                Fiori Object Page Title
              </ui5-title>
              <ui5-label
                class="ObjectPage-subTitle"
                ui5-label=""
              >
                Sub Title
              </ui5-label>
              <div
                class="ObjectPage-keyInfos"
              />
            </div>
          </div>
          <div
            class="Toolbar-outerContainer Toolbar-clear Toolbar-transparent"
          >
            <div
              class="Toolbar-toolbar"
            >
              <span
                class="spacer"
                style="flex-grow: 1;"
              />
              <div>
                <ui5-button
                  design="Default"
                  ui5-button=""
                >
                  Action
                </ui5-button>
              </div>
            </div>
          </div>
        </div>
      </header>
    </header>
    <div
      class="ObjectPage-contentHeader"
    >
      <span
        class="ObjectPage-headerCustomContent"
      >
        <div
          style="display: flex; flex-direction: column;"
        >
          <ui5-link
            design="Default"
            href="https://www.sap.com"
            ui5-link=""
          >
            www.myurl.com
          </ui5-link>
          <span
            class="Text-text"
          >
            Address 1
          </span>
          <span
            class="Text-text"
          >
            Address 2
          </span>
          <span
            class="Text-text"
          >
            Address 3
          </span>
        </div>
      </span>
    </div>
    <section
      class="ObjectPage-anchorBar"
      role="navigation"
      style="top: 0px;"
    >
      <ui5-tabcontainer
        collapsed="true"
        fixed="true"
        show-overflow="true"
        tab-layout="Standard"
        tabs-placement="Top"
      >
        <ui5-tab
          data-index="0"
          data-section-id="1"
          selected="true"
          semantic-color="Default"
          text="Test 1"
        />
        <ui5-tab
          data-index="1"
          data-section-id="2"
          semantic-color="Default"
          text="Test 2"
        />
        <ui5-tab
          data-index="2"
          data-section-id="3"
          semantic-color="Default"
          text="Test 3"
        />
        <ui5-tab
          data-index="3"
          data-section-id="4"
          semantic-color="Default"
          text="Test 4"
        />
        <ui5-tab
          data-index="4"
          data-section-id="5"
          semantic-color="Default"
          text="Test 5"
        />
      </ui5-tabcontainer>
      <ui5-button
        class="ObjectPageAnchorBar-anchorBarActionButton ObjectPageAnchorBar-anchorBarActionButtonExpandable "
        data-ui5wcr-object-page-header-action=""
        design="Default"
        icon="slim-arrow-down"
        ui5-button=""
      />
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-1"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 1
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <ui5-label
            ui5-label=""
          >
            My Content 1
          </ui5-label>
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-2"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 2
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <div
            style="height: 800px;"
          >
            Test2
          </div>
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-3"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 3
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          Test1
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-4"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 4
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <h1>
            Section 4
          </h1>
          <div
            class="ObjectPageSubSection-objectPageSubSection"
            data-component-name="ObjectPageSubSection"
            id="ObjectPageSubSection-4.1"
            role="region"
          >
            <div
              class="ObjectPageSubSection-objectPageSubSectionHeaderTitle"
            >
              SubSection 4.1
            </div>
            <div
              class="ObjectPageSubSection-subSectionContent"
            >
              Test 4 SubSection 1
            </div>
          </div>
          <div
            class="ObjectPageSubSection-objectPageSubSection"
            data-component-name="ObjectPageSubSection"
            id="ObjectPageSubSection-4.2"
            role="region"
          >
            <div
              class="ObjectPageSubSection-objectPageSubSectionHeaderTitle"
            >
              SubSection 4.2
            </div>
            <div
              class="ObjectPageSubSection-subSectionContent"
            >
              Test 4 SubSection 2
            </div>
          </div>
        </div>
      </div>
    </section>
    <section
      data-component-name="ObjectPageSection"
      id="ObjectPageSection-5"
      role="region"
    >
      <div
        class="ObjectPageSection-header"
        role="heading"
      >
        <div
          class="ObjectPageSection-title ObjectPageSection-uppercase"
        >
          Test 5
        </div>
      </div>
      <div
        class="ObjectPageSection-sectionContent"
      >
        <div
          class="ObjectPageSection-sectionContentInner"
        >
          <div
            class="ObjectPageSubSection-objectPageSubSection"
            data-component-name="ObjectPageSubSection"
            id="ObjectPageSubSection-5.1"
            role="region"
          >
            <div
              class="ObjectPageSubSection-objectPageSubSectionHeaderTitle"
            >
              SubSection 5.1
            </div>
            <div
              class="ObjectPageSubSection-subSectionContent"
            >
              Content of SubSection 5.1
            </div>
          </div>
          <div
            class="ObjectPageSubSection-objectPageSubSection"
            data-component-name="ObjectPageSubSection"
            id="ObjectPageSubSection-5.2"
            role="region"
          >
            <div
              class="ObjectPageSubSection-objectPageSubSectionHeaderTitle"
            >
              SubSection 5.2
            </div>
            <div
              class="ObjectPageSubSection-subSectionContent"
            >
              Content of SubSection 5.2
            </div>
          </div>
        </div>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
